update css stuff after review by @Andriamanitra, added darkmode

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <title>CodinGame Clash search</title>
 </head>
 
-<body>
+<body dark>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
